Added HTML Pseudocode

--- a/index.html
+++ b/index.html
@@ -21,5 +21,15 @@
     </head>
 <body>
     
+    <!-- RPS Jumbotron 
+
+    Bootstrap Row (Player 1 and Player 2 area)
+        Bootstrap Column (Left aligned)
+            Player 1 RPS Buttons
+        Bootstrap Column (Right Aligned)
+            Player 2 RPS Buttons
+    
+    Chat (Styled scrollable container. Messages will append to container as divs) -->
+
 </body>
 </html>
