Edited html pseudocode

--- a/index.html
+++ b/index.html
@@ -21,15 +21,11 @@
     </head>
 <body>
     
-    <!-- RPS Jumbotron 
+    <!-- Train schedule Jumbotron 
 
-    Bootstrap Row (Player 1 and Player 2 area)
-        Bootstrap Column (Left aligned)
-            Player 1 RPS Buttons
-        Bootstrap Column (Right Aligned)
-            Player 2 RPS Buttons
+    Train Schedule Table
     
-    Chat (Styled scrollable container. Messages will append to container as divs) -->
+    Train Input Form -->
 
 </body>
 </html>
