--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <!-- Train schedule Jumbotron -->
         <div class="container-fluid text-center">
             <div class="jumbotron">
-                <h1>South Detroit Train Schedule</h1>
+                <h1>Don't Stop Believin' This Train Schedule</h1>
                 <p>It goes on and on and on and on</p>
             </div>
         </div>
