--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                             <input type="text" class="form-control" id="trainTime">
                         </div>
                         <div class="form-group">
-                            <label for="exampleInputEmail1">Frequency</label>
+                            <label for="exampleInputEmail1">Frequency (min)</label>
                             <input type="text" class="form-control" id="trainFrequency">
                         </div>
                         <a href="#" class="btn btn-primary" id="submit">Submit</a>
